<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/create_title"
                android:singleLine="true"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorSecondary"
                android:textSize="22sp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/useless"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/blue_square_paper_small"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/normal_btn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/green_square_paper_small"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/important"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/orange_square_paper_small"/>
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/ultra"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:src="@drawable/red_square_paper_small"/>
            </FrameLayout>

        </LinearLayout>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/stick"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:checked="true"
            android:text="@string/create_notif"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <EditText
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_content"
                android:minHeight="48dp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorSecondary"
                android:textSize="18sp"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>