<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cla"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="@dimen/toolbar_elevation">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_widget"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/note_title_et_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="72dp"
            android:theme="@style/Base.Theme.Sticky.TitleTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/note_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title"
                android:textColor="@color/white"
                android:textColorHint="@color/accent"
                android:textSize="22sp" />
        </android.support.design.widget.TextInputLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        app:behavior_overlapTop="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- STA : Notification CB -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <ImageView
                    android:id="@+id/notification_ico"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingEnd="48dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_attach_file_24dp" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/notification_cb"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/notification_ico"
                    android:layout_toStartOf="@id/notification_cb"
                    android:text="@string/hint_notification"
                    android:textSize="16sp" />

            </RelativeLayout>
            <!-- END : Notification CB -->

            <!-- STA : Color BTN -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <ImageView
                    android:id="@+id/level_ico"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingEnd="48dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_color_lens_24dp" />

                <com.github.quentin7b.sn.ui.view.DefconImageButton
                    android:id="@+id/level_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackground" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/level_ico"
                    android:layout_toStartOf="@id/level_btn"
                    android:text="@string/hint_color"
                    android:textSize="16sp" />

            </RelativeLayout>
            <!-- END : Color BTN -->

            <!-- STA : Desc TXT -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <ImageView
                    android:id="@+id/content_ico"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingEnd="48dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_short_text_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/content_ico">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/note_content_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:hint="@string/hint_details"
                        android:textColor="@color/primary_text" />

                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <!-- STA : Desc TXT -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp">

                <ImageView
                    android:id="@+id/date_ico"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:paddingEnd="48dp"
                    android:paddingStart="0dp"
                    android:src="@drawable/ic_schedule_24dp" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/note_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/date_ico"
                    android:hint="@string/hint_date"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

            </RelativeLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/abl"
        app:layout_anchorGravity="bottom|right|end">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_save_white_24dp" />

    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>