<resources>
    <string name="app_name">Todo Notifications</string>
    <string name="transition_fab">fab</string>
    <string name="transition_cb">cb</string>

    <string name="action_delete">Delete</string>
    <string name="action_about">About</string>

    <string name="hint_title">Title</string>
    <string name="hint_notification">Show notification</string>
    <string name="hint_color">Color</string>
    <string name="hint_details">Details</string>
    <string name="hint_date">Due date ?</string>

    <string name="notification_deleted">Notification has been deleted</string>
    <string name="notification_restored">Notification has been restored!</string>
    <plurals name="grouped_notification_title">
        <item quantity="one">%d todo notification</item>
        <item quantity="other">%d todo notifications</item>
    </plurals>

    <string name="date_format">yyyy MM dd</string>
    <string name="long_date_format">EEEE, MMMM dd yyyy (dd/MM/yyyy)</string>
    <string name="error_title_empty">Title can\'t be empty</string>

    <string name="about_app">About</string>
    <string name="about_version">Version: %s</string>
    <string name="about_licenses">Open Source Licenses</string>

    <string name="action_compose_short">Compose</string>
    <string name="action_compose_long">Compose a notification</string>
</resources>
